2011-09-29  Filip Pizlo  <fpizlo@apple.com>

        Structure transitions involving many (> 64) properties sometimes cause structure corruption
        https://bugs.webkit.org/show_bug.cgi?id=69102

        Reviewed by Darin Adler.
        
        Made m_offset an int instead of a signed char. Changed the code to ensure that transitions
        don't lead to the dictionary kind being forgotten.
        
        * runtime/Structure.cpp:
        (JSC::Structure::Structure):
        * runtime/Structure.h:

2011-09-29  Yuqiang Xian  <yuqiang.xian@intel.com>

        DFG operation calls should be stdcall in Linux JSVALUE32_64 DFG JIT
        https://bugs.webkit.org/show_bug.cgi?id=69058

        Reviewed by Gavin Barraclough.

        Also Fixed the stdcall FunctionPtr constructors to make them compiled correctly on Linux

        * assembler/MacroAssemblerCodeRef.h:
        (JSC::FunctionPtr::FunctionPtr):

2011-09-29  Mark Hahnenberg  <mhahnenberg@apple.com>

        De-virtualize JSCell::visitChildrenVirtual and remove all other visitChildrenVirtual methods
        https://bugs.webkit.org/show_bug.cgi?id=68839

        Reviewed by Geoffrey Garen.

        Removed the remaining visitChildrenVirtual methods.  This patch completes the process of 
        de-virtualizing visitChildren.

        * API/JSCallbackObject.h:
        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * debugger/DebuggerActivation.cpp:
        * debugger/DebuggerActivation.h:
        * runtime/Arguments.cpp:
        * runtime/Arguments.h:
        * runtime/Executable.cpp:
        * runtime/Executable.h:
        * runtime/GetterSetter.cpp:
        * runtime/GetterSetter.h:
        * runtime/JSActivation.cpp:
        * runtime/JSActivation.h:
        * runtime/JSArray.cpp:
        * runtime/JSArray.h:
        * runtime/JSFunction.cpp:
        * runtime/JSFunction.h:
        * runtime/JSGlobalObject.cpp:
        * runtime/JSGlobalObject.h: